--- a/CoordenadorCRUDJavaWeb/src/main/webapp/cadastro.css
+++ b/CoordenadorCRUDJavaWeb/src/main/webapp/cadastro.css
@@ -1,83 +1,102 @@
-@charset "UTF-8";
-body{
-    background-color: #1B1F27;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
+body {
+	background-color: #1B1F27;
+	font-family: Arial, Helvetica, sans-serif;
+	overflow: hidden;
 }
 
-.area-login{
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+h1 {
+	color: white;
+	font-size: 26px;
+	font-weight: bold;
+	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 20px;
 }
 
-.login{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #181920;
-    width: 355px;
-    height: 460px;
-    padding: 35px;
-    border-radius: 10px;
+.area-login {
+	display: flex;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
 }
 
-.login form{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+.login {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #181920;
+	width: 355px;
+	height: 460px;
+	padding: 35px;
+	border-radius: 10px;
+	box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
 }
 
-.login input{
-    margin-top: 10px;
-    background-color: #252A34;
-    color: #C8D0F7;
-    border: none;
-    height: 45px;
-    outline: none;
-    padding-left: 10px;
-    border-radius: 8px;
-    text-transform: uppercase;
-    font-size: 12px;
+.login form {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 }
 
-.login img{
-    width: 100px;
-    height: auto;
+.login img {
+	width: 100px;
+	height: auto;
+	margin-bottom: 20px;
 }
 
-.input::placeholder{
-    color: #C8D0F7;
-    font-size: 14px;
+.login input, .login select {
+	margin-top: 10px;
+	background-color: #252A34;
+	color: #C8D0F7;
+	border: none;
+	height: 45px;
+	outline: none;
+	padding-left: 10px;
+	border-radius: 8px;
+	text-transform: uppercase;
+	font-size: 14px;
 }
 
-.botao{
-    display: block;
-    height: 35px;
-    width: 100%;
-    border-radius: 10px;
-    color: #FFFF;
-    padding-top: 15px;
-    text-align: center;
-    background-color: #5568FE;
-    font-size: 18px;
-    text-transform: uppercase;
-    font-weight: bold;
-    cursor: pointer;
-    
+.login input::placeholder, .login select option {
+	color: #C8D0F7;
+	font-size: 14px;
 }
 
-p{
-    color: #C8D0F7;
+.login .botao {
+	display: block;
+	height: 45px;
+	width: 100%;
+	border-radius: 10px;
+	color: #FFFF;
+	text-align: center;
+	background-color: #5568FE;
+	font-size: 16px;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
+	margin-top: 20px;
+	transition: background-color 0.3s;
+	line-height: 45px;
 }
 
-a{
-    color: #5568FE;
-    text-decoration: none;
-    margin-left: 5px;
+.login .botao:hover {
+	background-color: #7289DA;
 }
 
-form [type="password"]{
-    margin-bottom: 5px;
+.login p {
+	color: #C8D0F7;
+	margin-top: 20px;
+	font-size: 14px;
+}
+
+.login a {
+	color: #5568FE;
+	text-decoration: none;
+	margin-left: 5px;
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.login [type="password"] {
+	margin-bottom: 5px;
 }
